--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<title>my news</title>
-		<link rel="stylesheet" href="css.css" /> 
+		<link rel="stylesheet" href="css.css"  type="text" /> 
 	</head>
 
 	<body>
